# ccdc

./: README.md
ansible/: README.md  RISK_ASSESSMENT.md  ansible.cfg  bsd_harden.yml  hosts  linux_backup.yml  linux_graylog.yml  linux_harden.yml  linux_immutable.yml  linux_init_config.yml  linux_meta.yml  linux_package_audit.yml  linux_sshd_harden.yml  linux_vulnscan.yml  service_bsd_php_harden.yml  service_linux_php_harden.yml  service_ssh_change_passwords.yml  service_ssh_generate_passwords.yml  service_ssh_secure_shell.yml  service_windows_php_harden.yml  windows_backup.yml  windows_defender.yml  windows_graylog.yml  windows_meta.yml  windows_update.yml
ansible/roles/bsd_harden/tasks/: main.yml
ansible/roles/linux_backup/tasks/: main.yml
ansible/roles/linux_graylog/handlers/: main.yml
ansible/roles/linux_harden/tasks/: main.yml
ansible/roles/linux_init_config/tasks/: main.yml
ansible/roles/linux_package_audit/tasks/: main.yml
ansible/roles/linux_sshd_harden/files/: .gitignore
ansible/vars/: management.yml.template  passwords.yml.template
dispel/: RISK_ASSESSMENT.md
scripts/: RISK_ASSESSMENT.md  Watch-AuthEvents.ps1  Watch-SSHAuth.sh  bsd.sh  create_backup.sh  database_redaction.py  linux.sh  multiple.py  scell.c  windows.ps1
scripts/windows/: README.md  RISK-ASSESSMENT.md
scripts/windows/hardening/: DC.ps1
securesshd/: Cargo.toml  RISK_ASSESSMENT.md  build.rs
securesshd/src/: account.rs  auth.rs  child.rs  cli.rs  config.rs  daemonize.rs  embedded_shell.rs  identity.rs  lib.rs  main.rs  server.rs  session.rs  systemd.rs
(+11 files in other folders)
