[package]
name = "securesshd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
libc = "0.2"
log = "0.4.29"
rand = "0.10.0"
russh = "0.60.0"
rustix = { version = "1.1.4", features = ["process", "pty", "stdio", "termios", "thread", "fs"] }
rustix-openpty = "0.2.0"
tokio = { version = "1.51.1", features = ["full"] }
users = "0.11.0"

[dev-dependencies]
russh-sftp = "2.1.1"
serial_test = "3.4.0"
tempfile = "3.27.0"
